tests/ui/macros/macro-semicolon-for-colon.stderr
error: missing fragment specifier
  --> $DIR/macro-semicolon-for-colon.rs:5:6
   |
LL |     ($x;ty) => {};
   |      ^^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: use `:` instead of `;`
   |
LL -     ($x;ty) => {};
LL +     ($x:ty) => {};
   |

error: aborting due to 1 previous error

